# Nomad

./: .gitignore  README.md  compile.sh  global_dirs.sh  install.sh  spec.md
build_images/: README.md  userspace.dockerbuild
src/: .gitignore  README.md
src/docker_commands/: compile_userspace_program.sh  docker_comp5.13.sh  docker_comp5.15.19.sh
src/implementation_patches/: nomad.patch  tpp.patch
src/kernel_config/: 5.13.config  5.15.config  nomad.config  tpp.config
src/linux-5.13/include/linux/: migrate.h
src/linux-5.13/mm/: compaction.c  gup.c  internal.h  memory-failure.c  memory_hotplug.c  mempolicy.c  migrate.c  page_alloc.c  vmscan.c  vmstat.c
src/linux-5.15.19/mm/: htmm_sampler.c
src/memtis_userspace/: kill_ksampled.c  launch_bench.c
src/memtis_userspace/scripts/: memory_stat.sh  run_bench.sh  set_mem_size.sh  set_uncore_freq.sh
src/nomad_module/: .gitignore  Makefile  async_promote_main.c  buffer_ring.c  buffer_ring.h
src/post_processing/: config_bw.json  generate_microbenchcsv.sh  log_parser.py  plot_graphs.sh  plot_liblinear.py  plot_microbench.py  plot_pr.py  plot_redis.py
src/testing_scripts/liblinear/: run-huge.sh  run-memtis-huge-nothrash.sh  run-memtis-huge.sh  run-memtis.sh  run-nomad.sh  run-nonmemtis-huge-nothrash.sh  run-nonmemtis-huge.sh  run-nonmemtis.sh  run.sh
src/testing_scripts/microbenchmark/: README.md  create_seq_rand.py  create_thrashing.py  filter_access_pattern.py  generate_ycsb.sh  memtis_run.sh  nomad_run.sh  robustness-23G  robustness-25G  robustness-27G  robustness-29G  robustness.sh  run.sh  tpp_run.sh  utils.py  workloada-10G  workloada-10block  workloada-13.5G  workloada-13block  workloada-18G  workloada-24G  workloada-27block  write_binary_data.py
src/testing_scripts/microbenchmark/memtis_commands/: hottest_10G_read.sh  hottest_10G_write.sh  hottest_13.5G_read.sh  hottest_13.5G_write.sh  hottest_27G_read.sh  hottest_27G_write.sh  llc_miss_10G_read.sh  llc_miss_13G_read.sh  llc_miss_27G_read.sh
src/testing_scripts/motivation/: run.sh
src/testing_scripts/pageranking/: run-huge.sh  run-memtis-huge.sh  run-memtis.sh  run-nomad.sh  run-nonmemtis-huge.sh  run-nonmemtis.sh  run.sh
src/testing_scripts/redis/: redis.conf  run_redis-huge.sh  run_redis.sh  run_redis_client.huge.noevict.sh  run_redis_client.huge.sh  run_redis_client.large.sh  run_redis_client.noevict.sh  run_redis_client.small.sh  start_redis_server.sh  workloada.huge  workloada.large  workloada.small
src/testing_scripts/setup_system/: memtis_prepare.sh  nomad_start_tiering.sh  setup_cxl.sh  setup_pmem.sh  switch_kernel.sh  tpp_start_tiering.sh
src/userspace_programs/: .gitignore  CMakeLists.txt  README.md
src/userspace_programs/tpp/: CMakeLists.txt  buffer_ring.c  buffer_ring.h  buffer_ring_test.cc  calculate_xxhash.cc  generate_seqrand_pattern.cc  kernel_func.h  memory_access.cc  parse_async_prom.h  parse_async_prom_main.cc  parse_async_prom_module.cc  parse_async_prom_scan_vma.cc  parse_binary_array.cc  parse_binary_array.h  trigger_memtis.cc  trigger_shadow_page_reclamation.cc  trigger_shadowmapping_scan.cc
src/userspace_programs/util/: status_macros.h  string_extention.h
src/userspace_programs/util/x86_64/: timestamp.h
src/vm_scripts/: grub  ifup.sh  run.sh  start_tiering.sh
